[HTML] - 엥커태그, 폼, 자료구조 공부

--- a/HTML_CSS/html_tetst/life_coding/img.html
+++ b/HTML_CSS/html_tetst/life_coding/img.html
@@ -12,7 +12,7 @@
     </ul>
 
     <img src="../1026/images/cover.jpg" width="500px" height="300px"
-    alt="산이미지" title="산 이미지">
+    alt="강아지 덤블링" title="강아지 덤블링">
     <!-- 이미지가 깨지게 되면 표시할 문구 속성 alt -->
     <!-- 이미지 위에 커서를 두게 되면 설명 문구 뜨게하는 속성 title -->
 </body>
