[JSP]  - select 태그 주석 추가

--- a/workspace-jsp-hanbit/formex/WebContent/formex.html
+++ b/workspace-jsp-hanbit/formex/WebContent/formex.html
@@ -21,6 +21,7 @@
 			<input type= "radio" name="major" value= "mat">수학
 			<input type= "radio" name="major" value= "des">디자인<br/>
 			
+			<!-- 드롭다운 목록을 만들때 사용 -->
 			<select> name ="protocol">
 				<option value="http">http</option>
 				<option value="ftp" selected="selected">ftp</option>
@@ -28,6 +29,7 @@
 				<option value="pop">pop</option>
 			</select><br/>
 			<input type="submit" value="전송"><input type="reset" value="초기화">
+			ㄴ
 		</form>
 	
 	</body>
