[JSP]  - 폼 태그 서블릿 생성

--- a/workspace-jsp-hanbit/formex/WebContent/formex.html
+++ b/workspace-jsp-hanbit/formex/WebContent/formex.html
@@ -22,7 +22,7 @@
 			<input type= "radio" name="major" value= "des">디자인<br/>
 			
 			<!-- 드롭다운 목록을 만들때 사용 -->
-			<select> name ="protocol">
+			<select name ="protocol">
 				<option value="http">http</option>
 				<option value="ftp" selected="selected">ftp</option>
 				<option value="smtp">smtp</option>
